EKS-Config-terraform/elasctic-ip.tf
resource "aws_eip" "nat1" {
  depends_on = [aws_internet_gateway.main]

  tags = {
    Name = "main"
  }

}

resource "aws_eip" "nat2" {
  depends_on = [aws_internet_gateway.main]

  tags = {
    Name = "main"
  }

}
